minor changes to less file

--- a/css/main-view.less
+++ b/css/main-view.less
@@ -7,6 +7,17 @@ html {
   cursor: pointer;
 }
 
+.header {
+  .login {
+    float: right;
+    margin-bottom: 100px;
+
+    input {
+      display: inline;
+    }
+  }
+}
+
 .main-container {
   display: flex;
   width: 700px;
@@ -56,11 +67,4 @@ html {
   }
 }
 
-.login {
-  //top: 0;
-  float: right;
 
-  input {
-    display: inline;
-  }
-}
