render thumbnails and titles!

--- a/css/main-view.less
+++ b/css/main-view.less
@@ -38,9 +38,16 @@ html {
       color: white;
 
       .track {
+        display: flex;
+        align-items: center;
         border-bottom: 1px solid;
-        padding: 10px;
         .button;
+        .track-thumbnail {
+          
+        }
+        .track-title {
+          padding: 0px 30px;
+        }
       }
     }
 
