add a log in form; hide forms behind buttons

--- a/css/main-view.less
+++ b/css/main-view.less
@@ -8,10 +8,17 @@ html {
 }
 
 .header {
+  position: absolute;
+  top: 0px;
+  right: 0px;
   .login {
-    float: right;
-    margin-bottom: 100px;
-
+    margin-top: 20px;
+    margin-right: 20px;
+    .login-button {
+      text-decoration: underline;
+      cursor: pointer;
+      text-align: right;
+    }
     input {
       display: inline;
     }
