--- a/css/main-view.less
+++ b/css/main-view.less
@@ -5,6 +5,12 @@ html {
 .button {
   -webkit-user-select: none;
   cursor: pointer;
+  text-align: center;
+  padding: 10px;
+}
+
+.purple {
+  background: #BDBCED;
 }
 
 .header {
@@ -35,7 +41,7 @@ html {
   margin-top: 200px;
   
   .participants {
-    flex: 0 0 200px;
+    min-width: 120px;
   }
 
   .track-list-and-submit {
@@ -67,8 +73,6 @@ html {
       .submit-track-button {
         .button;
         flex: 0 0 100px;
-        text-align: center;
-        padding: 10px;
         background: #B5D2EA;
       }
 
