try a new track style

--- a/css/main-view.less
+++ b/css/main-view.less
@@ -73,15 +73,15 @@ body {
 
   .track-list {
     font-family: monospace;
-    background: #444;
-    color: white;
+    color: black;
     width: 600px;
     margin: 0px auto;
 
     .track {
+      position: relative;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid;
+      border-bottom: 1px solid #aaa;
       .button;
       .track-thumbnail {
         
