when a player joins a room, assign them a random color; todo: make the color customizeable?

--- a/css/main-view.less
+++ b/css/main-view.less
@@ -89,6 +89,13 @@ body {
       .track-title {
         padding: 0px 30px;
       }
+      .track-color {
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        right: 0px;
+        width: 20px;
+      }
     } 
   }
 
@@ -124,6 +131,16 @@ body {
   }
   .chat {
     padding: 10px;
+    .participant {
+      display: flex;
+      align-items: center;
+      .player-color {
+        width: 12px;
+        height: 12px;
+        border-radius: 10px;
+        margin-right: 5px;
+      }
+    }
   }
 }
 
