huge refactor: using vue.js intead of riot

--- a/index.less
+++ b/index.less
@@ -117,6 +117,7 @@ body {
   right: 0px;
   display: flex;
   flex-direction: column;
+  
   .video-and-chat {
     margin: 0px auto;
     width: 640px;
@@ -138,7 +139,8 @@ body {
       }
     }
   }
-  .chat {
+
+  .participant-list {
     padding: 10px;
     .participant {
       display: flex;
@@ -151,6 +153,7 @@ body {
       }
     }
   }
+  
 }
 
 
