--- a/index.less
+++ b/index.less
@@ -21,6 +21,7 @@ body {
   position: fixed;
   top: 0px;
   right: 0px;
+  z-index: 20;
   .login {
     margin-top: 20px;
     margin-right: 20px;
@@ -39,12 +40,17 @@ body {
 }
 
 .submit-track-wrapper {
-  position: fixed;
   z-index: 10;
-  width: 50%;
+
+  @media (min-width: 1200px) {
+    position: fixed;
+    width: 50%;
+  }
 
   .submit-track {
-    width: 600px;
+    @media (min-width: 1200px) {
+      width: 600px;
+    }
     margin: 0px auto;
     padding-top: 20px;
     background: white;
@@ -78,13 +84,19 @@ body {
 
 .track-list-wrapper {
   padding: 100px 0px;
-  width: 50%;
+
+  @media (min-width: 1200px) {
+    width: 50%;
+  }
 
   .track-list {
     font-family: monospace;
     color: black;
-    width: 600px;
     margin: 0px auto;
+
+    @media (min-width: 1200px) {
+      width: 600px;
+    }
 
     .track {
       position: relative;
@@ -111,31 +123,44 @@ body {
 }
 
 .video-and-chat-wrapper {
-  position: fixed;
-  width: 50%;
-  top: 100px;
-  right: 0px;
+  position: relative;
   display: flex;
   flex-direction: column;
   
+  @media (min-width: 1200px) {
+    position: fixed;
+    top: 100px;
+    right: 0px;
+    width: 50%;
+  }
+
   .video-and-chat {
     margin: 0px auto;
-    width: 640px;
-    height: 390px;
+    width: 100%;
+
+    @media (min-width: 1200px) {
+      width: 640px;
+    }
+
     .video {
+
       .no-video {
         border: 1px dashed #aaa;
-        height: 100%;
         color: #aaa;
         display: flex;
         align-items: center;
         justify-content: center;
+        min-height: 390px;
         .arrow {
           font-size: 40px;
         }
         .helper-text {
           font-size: 20px;
         }
+      }
+
+      #video-player {
+        width: 100%;
       }
     }
   }
