--- a/index.less
+++ b/index.less
@@ -60,13 +60,12 @@ body {
       display: flex;
       .submit-track-button {
         .button;
-        flex: 0 0 100px;
         background: #B5D2EA;
       }
 
       input {
         font: inherit;
-        width: 100%;
+        flex-grow: 1;
         padding-left: 10px;
         &:focus {
           outline: none;
