--- a/index.less
+++ b/index.less
@@ -180,7 +180,7 @@ body {
 
   .chat-conversation {
     @media (min-width: 1200px) {
-      height: 300px;
+      max-height: 300px;
       overflow: auto;
     }
   }
