Chats now colored by user

--- a/index.less
+++ b/index.less
@@ -180,8 +180,17 @@ body {
 
   .chat-conversation {
     @media (min-width: 1200px) {
-      max-height: 300px;
+      max-height: 175px;
       overflow: auto;
+    }
+    .message-color {
+      top: 0px;
+      bottom: 0px;
+      right: 0px;
+      width: 10px;
+    }
+    .message-text {
+      display: flex;
     }
   }
   
