--- a/src/new-room-view.less
+++ b/src/new-room-view.less
@@ -63,8 +63,7 @@
   }
 
   .activities {
-    padding-top: 20px;
-    padding-right: 15px;
+    padding: 20px 15px;
     margin: 0px auto;
     @media (min-width: 640px) {
       width: 640px;
@@ -121,7 +120,7 @@
     input {
       font: inherit;
       flex-grow: 1;
-      padding-left: 10px;
+      padding: 10px;
       &:focus {
         outline: none;
       }
