very slightly more readable login

--- a/src/login.less
+++ b/src/login.less
@@ -2,14 +2,23 @@
   position: absolute;
   top: 20px;
   right: 20px;
+  padding: 10px;
+
+  &.active {
+    background: white;
+    border: 1px solid #aaa;
+  }
+
   .login-button {
     text-decoration: underline;
     cursor: pointer;
     text-align: right;
   }
+
   input {
     display: inline;
   }
+  
   .error-message {
     margin-top: 10px;
   }
