add fish-head link to extension

--- a/src/new-room-view.less
+++ b/src/new-room-view.less
@@ -28,6 +28,11 @@
     @import (less) "login.less";
   }
 
+  .fish-head {
+    position: absolute;
+    top: 10px;
+  }
+
   .tabs {
     flex: 40px 0 0;
     display: flex;
