click dot next to your name to reassign yourself a new random color

--- a/src/room-view.less
+++ b/src/room-view.less
@@ -21,6 +21,12 @@
           height: 12px;
           border-radius: 10px;
           margin-right: 5px;
+          pointer-events: none;
+
+          &.clickable {
+            cursor: pointer;
+            pointer-events: all;
+          }
         }
       }
     }
