fix width of color bar on messages

--- a/src/room-view.less
+++ b/src/room-view.less
@@ -89,7 +89,7 @@
         top: 0px;
         bottom: 0px;
         right: 0px;
-        width: 10px;
+        flex: 0 0 10px;
         margin-right: 5px;
       }
     }
