--- a/src/room-view.less
+++ b/src/room-view.less
@@ -74,10 +74,11 @@
   }
 
   .activities {
-    padding: 20px 115px;
+    padding: 20px 15px;
     margin: 0px auto;
     @media (min-width: 640px) {
       width: 640px;
+      padding: 20px 115px;
     }
     overflow: auto;
     flex-grow: 1;
@@ -89,11 +90,16 @@
         position: relative;
 
         .message-author {
+          display: none;
           position: absolute;
           transform: translateX(-100%);
           top: 1px;
           left: -5px;
           font-size: 80%;
+
+          @media (min-width: 640px) {
+            display: block;
+          }
         }
 
         .message-color {
